Fixes missing background

--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,18 @@
   color: var(--light);
 }
 
+.main-body {
+  background-color: var(--background);
+  color: var(--light);
+  width: 100%;
+  height: 100%;
+
+  .home-page {
+    background-color: var(--background);
+    color: var(--light);
+  }
+}
+
 .btn {
   &.light {
     background-color: var(--primary-light);
@@ -116,10 +128,4 @@
       }
     }
   }
-}
-
-
-.main-body {
-  background-color: var(--background);
-  color: var(--light);
 }
